1-add-microsoft-agent-framework-agent-connect-to-mcp-server-create-chat-box-enable-communication
works locally after configuring env file with azure foundry connection details and model details

--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,8 @@ appsettings.Production.json
 appsettings.Staging.json
 secrets.json
 .env
-.env.*
+.env.local
+.env.development
+.env.production
+.env.staging
+!.env.example
