--- a/IncidentCommander.API/appsettings.example.json
+++ b/IncidentCommander.API/appsettings.example.json
@@ -27,6 +27,17 @@
     },
     "AllowedHosts": "*",
     "CorsOrigin": "http://localhost:5173",
+    "Azure": {
+        "OpenAI": {
+            "Endpoint": "https://YOUR-RESOURCE.openai.azure.com/",
+            "ApiKey": "YOUR_AZURE_OPENAI_API_KEY",
+            "DeploymentName": "gpt-4o"
+        }
+    },
+    "McpServer": {
+        "UseStdio": false,
+        "BaseUrl": "http://mcp:8000/sse"
+    },
     "Chaos": {
         "Enabled": false
     }
